# MUD

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODING-STANDARDS.md  README.md  config.yaml  config.yml  format-checker-util  format-checker.sh  reformat.sh
MudGameEngine/: CMakeLists.txt
MudGameEngine/include/: Action.h  AreaEntity.h  AttackAction.h  Character.h  CharacterEntity.h  CombatSimulation.h  DoorEntity.h  Entity.h  Event.h  MoveAction.h  NPCEntity.h  ObjectEntity.h  Parser.h  PlayerCharacterEntity.h  Reset.h  ResetEntity.h  Roll.h  RoomEntity.h  SayAction.h  ShopEntity.h  Spell.h  SpellParser.h  SpellsParser.h  UniqueId.h  YamlParser.h  parser.h
MudGameEngine/include/actions/: Action.h  AttackAction.h  CastAction.h  CharacterModAction.h  DecoyAction.h  HaltAction.h  LookAction.h  MoveAction.h  NullAction.h  PrgmAction.h  SaveAction.h  SayAction.h  SpellAction.h  SwapAction.h  TakeAction.h  TimedAction.h
MudGameEngine/include/controllers/: AiController.h  CharacterController.h  PlayerController.h
MudGameEngine/include/entities/: AreaEntity.h  Character.h  CharacterComponent.h  CharacterEntity.h  CombatComponent.h  DoorEntity.h  Entity.h  NPC.h  NPCharacterEntity.h  NonPlayerCharacter.h  ObjectEntity.h  PlayerCharacter.h  PlayerCharacterEntity.h  RoomEntity.h  ShopEntity.h
MudGameEngine/include/i18n/: i18n.h
MudGameEngine/include/observe/: ActionObserver.h  Observable.h  Observer.h
MudGameEngine/include/reset/: Reset.h  ResetManager.h
MudGameEngine/include/resources/: ActionMessages.h  DataFields.h  DialogueStrings.h  PlayerCharacterDefaults.h  SpellDataFields.h
MudGameEngine/include/states/: CombatState.h  Dialogue.h  EndState.h  IState.h  InteractState.h  WaitState.h
MudGameEngine/lib/: CMakeLists.txt  CombatSimulation.cpp  UniqueId.cpp
MudGameEngine/lib/actions/: Action.cpp  AttackAction.cpp  CMakeLists.txt  CastAction.cpp  CharacterModAction.cpp  DecoyAction.cpp  HaltAction.cpp  LookAction.cpp  MoveAction.cpp  NullAction.cpp  PrgmAction.cpp  SaveAction.cpp  SayAction.cpp  SpellAction.cpp  SwapAction.cpp  TakeAction.cpp  TimedAction.cpp
MudGameEngine/lib/combatSim/: CMakeLists.txt  CombatSimulation.cpp
MudGameEngine/lib/controllers/: AiController.cpp  CMakeLists.txt  CharacterController.cpp  PlayerController.cpp
MudGameEngine/lib/dataFiles/: CMakeLists.txt  detailed_midgaard.yml  detailed_smurf.yml
MudGameEngine/lib/entities/: AreaEntity.cpp  AttackAction.cpp  CMakeLists.txt  Character.cpp  CharacterEntity.cpp  CombatComponent.cpp  DoorEntity.cpp  Entity.cpp  MoveAction.cpp  NPC.cpp  NPCEntity.cpp  NPCharacterEntity.cpp  NonPlayerCharacter.cpp  ObjectEntity.cpp  PlayerCharacter.cpp  PlayerCharacterEntity.cpp  Reset.cpp  ResetEntity.cpp  RoomEntity.cpp  SayAction.cpp  ShopEntity.cpp  UniqueId.cpp
MudGameEngine/lib/event/: CMakeLists.txt  Event.cpp
MudGameEngine/lib/i18n/: CMakeLists.txt  i18n.cpp
MudGameEngine/lib/observe/: ActionObserver.cpp  CMakeLists.txt
MudGameEngine/lib/parser/: CMakeLists.txt  Parser.cpp  SpellParser.cpp  YamlParser.cpp  parser.cpp
MudGameEngine/lib/reset/: CMakeLists.txt  Reset.cpp  ResetManager.cpp
MudGameEngine/lib/spells/: CMakeLists.txt  Spell.cpp
MudGameEngine/lib/states/: CMakeLists.txt  CombatState.cpp  Dialogue.cpp  EndState.cpp  IState.cpp  InteractState.cpp  WaitState.cpp
MudServer/: CMakeLists.txt  README.md  admin.yml
MudServer/cmake/: FindYamlCpp.cmake
MudServer/include/: ConnectionContainer.h  ConnectionManager.h  DummyEntity.h  Entity.h  Handler.h  LoginHandler.h  MudProtocol.h  PlayHandler.h  Protocol.h  RoomEntity.h  YamlParser.h
MudServer/include/commandparser/: CommandParser.h
MudServer/include/configparser/: ConfigParser.h
MudServer/include/connectionmanager/: ConnectionContainer.h  ConnectionManager.h  MudProtocol.h  Protocol.h
MudServer/include/gamemanager/: Administrator.h  Area.h  Character.h  EntityFactory.h  GameManager.h  GameState.h  LutBuilder.h  Player.h  PlayerService.h  Room.h
MudServer/include/persistence/: PersistenceService.h
MudServer/include/resources/: PlayerCharacterDefaults.h  commands.h
MudServer/lib/: CMakeLists.txt
MudServer/lib/commandparser/: CMakeLists.txt  CommandParser.cpp
MudServer/lib/connectionman/: CMakeLists.txt  ConnectionContainer.cpp  ConnectionManager.cpp  MudProtocol.cpp
MudServer/lib/connectionmanager/: CMakeLists.txt  ConnectionContainer.cpp  ConnectionManager.cpp  MudProtocol.cpp
MudServer/lib/dataFiles/: CMakeLists.txt  config.yaml
MudServer/lib/entities/: CMakeLists.txt  DummyEntity.cpp  RoomEntity.cpp
MudServer/lib/gamemanager/: Administrator.cpp  Area.cpp  CMakeLists.txt  Character.cpp  EntityFactory.cpp  GameManager.cpp  GameState.cpp  LutBuilder.cpp  Player.cpp  PlayerService.cpp  Room.cpp  sha256.c
MudServer/lib/handlers/: CMakeLists.txt  LoginHandler.cpp  PlayHandler.cpp
MudServer/lib/parser/: CMakeLists.txt  YamlParser.cpp
MudServer/lib/persistence/: CMakeLists.txt  PersistenceService.cpp
MudServer/lib/protocol/: CMakeLists.txt  MudProtocol.cpp
MudServer/lib/resources/: CMakeLists.txt  actions.cpp  commands.cpp  playercharacterdefaults.cpp
MudServer/test/: CMakeLists.txt  CommandParserTests.cpp  ConnectionManagerTests.cpp  EntitiesTests.cpp  GameManagerTests.cpp  GameStateTests.cpp  LutBuilderTests.cpp  ParserTests.cpp  PlayerServiceTest.cpp  SpellTests.cpp
MudServer/test/include/: MockCharacter.h  MockConnectionManager.h  MockGameManager.h
MudServer/test/lib/: Makefile
MudServer/test/tools/: Makefile  cmake_install.cmake
MudServer/tools/: CMakeLists.txt
MudServer/tools/chatserver/: CMakeLists.txt  mudserver.cpp
MudServer/tools/client/: CMakeLists.txt  ChatWindow.cpp  chatclient.cpp
MudServer/tools/parser/: CMakeLists.txt  parsertest.cpp
MudServer/tools/server/: CMakeLists.txt  configparser.cpp  connmantest.cpp  mudserver.cpp
Networking/lib/: CMakeLists.txt  Client.cpp  Server.cpp  TransferMessage.h
test/: CMakeLists.txt  GameManagerTests.cpp  ParserTests.cpp  PlayerServiceTest.cpp  SpellTests.cpp  i18ntests.cpp
test/include/: MockConnectionManager.h
(+153 files in other folders)
